tests/frost/pass/e2b.mle
type bool = True | False
type pair a b = Pair of a, b

val poly : (forall a . a -> a) -> (int * bool)

val check : (forall a . a -> a) -> (int * bool)
let check x = poly x
