tests/frost/fail/e2a.mle
type bool = True | False
type pair a b = Pair of a, b

val poly : (forall a . a -> a) -> (int * bool)

let infer x = poly x
